# FreeCAD

./: .travis.yml  CMakeLists.txt
cMake/: FindNETGEN.cmake  FindOpenCasCade.cmake
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake
data/proposals/: fenics_mesh.ipynb  generic_fem_solver_proposal.md  genric_fem_solver_proposal.md
package/conda/: build.sh  meta.yaml  run_docker_build.sh
recipe/: bld.bat
src/App/: Application.cpp  DocumentObjectPyImp.cpp  DocumentPy.xml  DocumentPyImp.cpp  ExtensionContainerPyImp.cpp  FeaturePythonPyImp.h  FeaturePythonPyImp.inl  PreCompiled.h  PropertyGeo.cpp
src/Base/: PyObjectBase.cpp  PyObjectBase.h  VectorPyImp.cpp
src/CXX/Python3/: Objects.hxx  cxx_extensions.cxx
src/Ext/freecad/: CMakeLists.txt  __init__.py.template
src/Ext/freecad/fem/: CMakeLists.txt  __init__.py  femgui.py  init.py  init_gui.py  objects_fem.py  test_fem.py
src/Ext/freecad/fem/commands/: commands.py  manager.py
src/Ext/freecad/fem/examples/: boxanalysis.py  ccx_cantilever_std.py  manager.py  material_multiple_twoboxes.py  material_nl_platewithhole.py  rc_wall_2d.py  thermomech_flow1d.py  thermomech_spine.py
src/Ext/freecad/fem/guiobjects/: FemSelectionWidgets.py  _TaskPanelFemSolverControl.py  _ViewProviderFemConstraintElectrostaticPotential.py  _ViewProviderFemConstraintFlowVelocity.py  _ViewProviderFemConstraintInitialFlowVelocity.py  _ViewProviderFemElementFluid1D.py  _ViewProviderFemElementGeometry1D.py  _ViewProviderFemMeshGmsh.py  _ViewProviderFemResultMechanical.py  _ViewProviderFemSolverCalculix.py
src/Ext/freecad/fem/inout/: importCcxFrdResults.py  importVTKResults.py  importZ88Mesh.py  importZ88O2Results.py
src/Ext/freecad/fem/mesh/: femmesh2mesh.py  gmshtools.py
src/Ext/freecad/fem/objects/: _FemSolverCalculix.py
src/Ext/freecad/fem/result/: resulttools.py
src/Ext/freecad/fem/solver/: run.py  solverbase.py  writerbase.py
src/Ext/freecad/fem/solver/calculix/: solver.py  tasks.py  writer.py
src/Ext/freecad/fem/solver/elmer/: solver.py  tasks.py  writer.py
src/Ext/freecad/fem/solver/elmer/equations/: elasticity.py  electrostatic.py  equation.py  flow.py  fluxsolver.py  heat.py
src/Ext/freecad/fem/solver/z88/: solver.py  tasks.py  writer.py
src/Ext/freecad/fem/test/app/: support_utils.py  test_ccxtools.py  test_result.py  test_solverframework.py
src/Ext/freecad/fem/tools/: ccxtools.py  femutils.py
src/Gui/: Application.cpp  PythonConsolePy.cpp  PythonConsolePy.h  WidgetFactory.cpp  WidgetFactory.h
src/Main/: CMakeLists.txt  MainGui.cpp
src/Mod/: CMakeLists.txt
src/Mod/AddonManager/: AddonManager.py
src/Mod/Arch/: ArchCommands.py  ArchComponent.py  ArchProfile.py  ArchSite.py  ArchSpace.py  ArchStructure.py  ArchWindow.py  importIFC.py
src/Mod/Draft/: Draft.py  DraftGeomUtils.py  DraftTools.py
src/Mod/Fem/: CMakeLists.txt  FemMesh2Mesh.py  FemToolsZ88.py  InitGui.py  _CommandGenericProperty.py  _CommandSolverGeneric.py  _TaskPanelFemSolverGeneric.py  ccxFrdReader.py  importZ88Mesh.py
src/Mod/Fem/App/: AppFem.cpp  AppFemPy.cpp  FemMesh.cpp  FemMesh.h  FemMeshPyImp.cpp  FemMeshShapeNetgenObject.cpp  FemMeshShapeObject.cpp  FemVTKTools.cpp  HypothesisPy.cpp  HypothesisPy.h
src/Mod/Fem/Gui/: Workbench.cpp
src/Mod/Fem/Gui/Resources/: Fem.qrc
src/Mod/Fem/femtools/: ccxtools.py
src/Mod/Fem/genericSolver/: CMakeLists.txt  FemToolsGeneric.py  FenicsSolver.py  GenericSolver.py  _FemSolverGeneric.py  _GenericSolver.py  _TaskPanelFemSolverGeneric.py  __init__.py  _commands.py
src/Mod/FemDeprecated/: CMakeLists.txt  ObjectsFem.py  TestFem.py  femcommands.py  femexamples.py  femguiobjects.py  feminout.py  femmesh.py  femobjects.py  femresult.py  femsolver.py  femtest.py  femtools.py
src/Mod/Mesh/App/Core/: Curvature.cpp
src/Mod/MeshPart/App/: CMakeLists.txt  MeshFlattening.cpp  MeshFlatteningLscmRelax.cpp  MeshFlatteningLscmRelax.h  MeshFlatteningNurbs.cpp  Mesher.cpp
src/Mod/OpenSCAD/: OpenSCAD2Dgeom.py  OpenSCADUtils.py
src/Mod/Part/: InitGui.py
src/Mod/Part/App/: AppPart.cpp  AppPartPy.cpp  BSplineCurvePyImp.cpp  CMakeLists.txt  TopoShapePyImp.cpp
src/Mod/Part/AttachmentEditor/: Commands.py
src/Mod/Sketcher/App/: ConstraintPyImp.cpp  SketchObjectPyImp.cpp
src/Mod/Spreadsheet/: TestSpreadsheet.py
src/Mod/Start/StartPage/: StartPage.py
src/Mod/Test/: Document.py
src/Tools/generateTemplates/: templateClassPyExport.py
